--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.3.3",
+    "lucide-react": "^0.477.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
