--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
-MONGODB_URI=mongodb+srv://abbas:1234@bcdb.uckvr.mongodb.net/
+MONGODB_URI=mongodb+srv://ragav880:fooddb@fooddb.zpuxl.mongodb.net/
 PORT=5000
+JWT_SECRET=bitecraftrecipesecret2024
+EDAMAM_APP_ID=6b0226f3
+EDAMAM_APP_KEY=6a002b4a45703b8192ab3b74af969984
